// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate > should generate by openapi.json 1`] = `
"import request from '@/api';

/**
 * @description 分类详情查询
 * @url /address/category/\${param0}
 * @method GET
 * @author unplugin-openapi
 */
export function save<R = API.ResponseData, T = API.ResponseData>(
  params: ExpandRecursively<API.saveParams>,
  options?: Parameters<typeof request.Get<R, T>>[1],
) {
  const { id: param0, ...queryParams } = params;
  return request.Get<R, T>(\`/address/category/\${param0}\`, {
    params: { ...queryParams },
    ...(options || {}),
  });
}
"
`;

exports[`generate > should generate by openapi.json 2`] = `
"// API 更新时间：
// API 唯一标识：
export * from './biaozhundezhimokuai';
"
`;

exports[`generate > should generate by openapi.json 3`] = `
"/* eslint-disable */
// @ts-nocheck
declare namespace API {
  interface ResponseData {
    code?: number;
    msg?: string;
    hint?: string;
    data?: Record<string, any>;
    success?: boolean;
  }

  interface saveParams {
    id: number;
  }
}

type Expand<T> = T extends infer O ? { [K in keyof O]: O[K] } : never;
type ExpandRecursively<T> = T extends object
  ? T extends infer O
    ? { [K in keyof O]: ExpandRecursively<O[K]> }
    : never
  : T;
"
`;

exports[`generate > should generate by swagger.json 1`] = `
"import request from '@/api';

/**
 * @description 登录
 * @url /login
 * @method POST
 * @author unplugin-openapi
 */
export function loginUsingPost<R = API.RObject_, T = API.RObject_>(
  body: ExpandRecursively<API.LoginBody>,
  options?: Parameters<typeof request.Post<R, T>>[2],
) {
  return request.Post<R, T>('/login', body, {
    headers: {
      'Content-Type': 'application/json',
    },
    ...(options || {}),
  });
}

/**
 * @description 登出
 * @url /logout
 * @method DELETE
 * @author unplugin-openapi
 */
export function logoutUsingDelete<R = API.RObject_, T = API.RObject_>(
  options?: Parameters<typeof request.Delete<R, T>>[2],
) {
  return request.Delete<R, T>(
    '/logout',
    {},
    {
      ...(options || {}),
    },
  );
}

/**
 * @description 刷新
 * @url /refresh
 * @method POST
 * @author unplugin-openapi
 */
export function refreshUsingPost<R = API.RObject_, T = API.RObject_>(
  options?: Parameters<typeof request.Post<R, T>>[2],
) {
  return request.Post<R, T>(
    '/refresh',
    {},
    {
      ...(options || {}),
    },
  );
}

/**
 * @description 注册
 * @url /register
 * @method POST
 * @author unplugin-openapi
 */
export function registerUsingPost<R = API.RObject_, T = API.RObject_>(
  body: ExpandRecursively<API.RegisterBody>,
  options?: Parameters<typeof request.Post<R, T>>[2],
) {
  return request.Post<R, T>('/register', body, {
    headers: {
      'Content-Type': 'application/json',
    },
    ...(options || {}),
  });
}
"
`;

exports[`generate > should generate by swagger.json 2`] = `
"// API 更新时间：
// API 唯一标识：
export * from './denglujiekou';
"
`;

exports[`generate > should generate by swagger.json 3`] = `
"/* eslint-disable */
// @ts-nocheck
declare namespace API {
  interface LoginBody {
    password?: string;
    username?: string;
  }

  interface RegisterBody {
    password?: string;
    username?: string;
  }

  interface RObject_ {
    code?: number;
    data?: Record<string, any>;
    msg?: string;
  }
}

type Expand<T> = T extends infer O ? { [K in keyof O]: O[K] } : never;
type ExpandRecursively<T> = T extends object
  ? T extends infer O
    ? { [K in keyof O]: ExpandRecursively<O[K]> }
    : never
  : T;
"
`;
